Remove margins and padding from elements inside header; align-items to center instead of baseline to move hamburger item into correct position

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,7 +43,7 @@ header {
     z-index: 99;
     display: flex;
     justify-content: space-between;
-    align-items: baseline;
+    align-items: center;
 }
 
 /*Remove underline from and change colour of links*/
@@ -75,8 +75,12 @@ h3 {
     letter-spacing: 1px;
 }
 
-#main-heading {
+/*#main-heading {
     margin: 5px auto;
+}*/
+
+#main-heading {
+    padding: 0.5rem;
 }
 
 /*Navigation*/
@@ -117,8 +121,7 @@ nav {
 }
 
 .nav-toggle-label i {
-    padding: 10px;
-    margin: 0;
+    /*padding: 10px;*/
     font-size: 2rem;
 }
 
